fix: copy leaderboard snapshot collections instead of wrapping them